<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aufgabe1_3.MainActivity"
    tools:ignore="MergeRootFrame" >


        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="91dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/logo1" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView1"
            android:layout_marginLeft="38dp"
            android:layout_toRightOf="@+id/imageView1"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/logo2" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_marginTop="32dp"
            android:layout_toLeftOf="@+id/imageView2"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/logo3" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/imageView2"
            android:layout_below="@+id/imageView2"
            android:layout_marginTop="32dp"
            android:layout_toRightOf="@+id/imageView3"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/logo4"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:text="@string/textRelativeL"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="true" />

           

    </RelativeLayout>

